fix: travel card icon in dark mode

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -311,6 +311,10 @@ p + p {
         display: block;
         margin-right: var(--spacings-medium);
     }
+    svg,
+    path {
+        fill: currentColor;
+    }
 }
 
 .shop__summaryPrice {
